I added scripts in the pipeline

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 KOBO_USERNAME=floreniyigena
-KOBO_PASSWORD=Rukundo@julia12(Password)
+KOBO_PASSWORD=Rukundo@julia12
 PG_HOST=localhost
 PG_DATABASE=postgres
 PG_USER=postgres
